msa2-dashboard-server/ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: msa2-dashboard-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dashboard.msasmp02.com
    http:
      paths:
      - path: /
        backend:
          serviceName: msa2-dashboard-server
          servicePort: 9011
